# caltwin

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  pyproject.toml
.claude/skills/: twin-calibrate  twin-dashboard  twin-decide  twin-reflect  twin-status
.github/workflows/: ci.yml  integration.yml
data/: calibration_cases_raw.json  out_of_scope_cases.json
demo/: demo_script.md
docs/: POSITIONING.md  fidelity_report_demo.html  quickstart.md  twin-runtime-substrate-spec-v0.1.md
docs/specs/: phase-b-bootstrap-protocol.md  phase-c-shadow-mode-demo.md  phase-d-implicit-reflection.md  phase-e-post-demo-infrastructure.md
docs/superpowers/plans/: 2026-03-16-phase1-evidence-foundation.md  2026-03-16-phase2a-package-restructure.md  2026-03-16-phase2b-memory-access-planner.md  2026-03-16-phase3-calibration-enhancement.md  2026-03-17-phase4-code-quality-refactor.md  2026-03-17-phase4-investor-ready-completion.md  2026-03-17-phase5a-release-hardening.md  2026-03-18-ab-baseline-runner.md  2026-03-18-phase5b-structured-deliberation.md  2026-03-18-phase5c-temporal-calibration.md  2026-03-19-phase-b-bootstrap-protocol.md  2026-03-19-phase-d-implicit-reflection.md  2026-03-20-phase-c-shadow-mode-demo.md  2026-03-20-phase-e-post-demo-infrastructure.md
docs/superpowers/specs/: 2026-03-16-phase2b-memory-access-planner-design.md  2026-03-16-phase3-calibration-enhancement-design.md  2026-03-16-twin-runtime-evolution-design.md  2026-03-17-phase4-launch-ready-release-design.md  2026-03-17-phase5-release-hardening-design.md  2026-03-18-phase5b-structured-deliberation-design.md  2026-03-18-phase5c-temporal-calibration-design.md
schema/: twin-runtime-core-v0.1.1.schema.json
scripts/: verify_flywheel.py
skills/openclaw/caltwin/: SKILL.md
skills/openclaw/caltwin/scripts/: heartbeat_reflect.py
skills/openclaw/twin-runtime/: SKILL.md
skills/openclaw/twin-runtime/references/: calibration.md
skills/openclaw/twin-runtime/scripts/: install_check.sh
src/twin_runtime/: __init__.py  cli.py
src/twin_runtime/application/bootstrap/: engine.py  questions.py
src/twin_runtime/application/calibration/: __init__.py  bias_detector.py  case_manager.py  drift_detector.py  event_collector.py  experience_updater.py  fidelity_evaluator.py  hard_case_miner.py  micro_calibration.py  outcome_tracker.py  reflection_generator.py  state_updater.py  time_decay.py
src/twin_runtime/application/comparison/: __init__.py  report.py  (+2 more)
src/twin_runtime/calibration/: __init__.py  case_manager.py  event_collector.py  fidelity_evaluator.py  state_updater.py
src/twin_runtime/cli/: __init__.py  _calibration.py  _comparison.py  _implicit.py  _main.py  _onboarding.py  _pipeline.py  _reporting.py  _setup.py  _skills.py
src/twin_runtime/compiler/: __init__.py  compiler.py
src/twin_runtime/interfaces/: cli.py  defaults.py
src/twin_runtime/models/: __init__.py  calibration.py  primitives.py  runtime.py  situation.py  twin_state.py
src/twin_runtime/runtime/: __init__.py  conflict_arbiter.py  decision_synthesizer.py  head_activator.py  llm_client.py  pipeline.py  situation_interpreter.py
src/twin_runtime/server/: __init__.py  mcp_server.py
src/twin_runtime/sources/: __init__.py  base.py  calendar_adapter.py  clustering.py  document_adapter.py  evidence_types.py  gmail_adapter.py  google_auth.py  notion_adapter.py  openclaw_adapter.py  registry.py
src/twin_runtime/store/: __init__.py  calibration_store.py  twin_store.py
tests/: conftest.py  helpers.py  test_abstention_accuracy.py  test_backend_protocols.py  test_bias_detector.py  test_calibration.py  test_cli.py  test_clustering.py  test_compiler_cold_start.py  test_compiler_conflict_style.py  test_compiler_typed_extraction.py  test_consistency_checker.py  test_dashboard.py  test_defaults.py  test_deliberation.py  test_drift_detector.py  test_evidence_dedup_integration.py  test_evidence_integration.py  test_evidence_types.py  test_experience_library.py  test_fidelity_evaluator_unit.py  test_fidelity_score.py  test_full_cycle.py  test_golden_traces.py  test_google_sources.py  test_head_activator.py  test_interface_lock.py  test_mcp_calibrate_history.py  test_mcp_resource_fallback.py  test_mcp_server.py  test_micro_calibration.py  test_models.py  test_ontology.py  test_orchestrator.py  test_outcome_tracker.py  test_persistence_correctness.py  test_phase3_models.py  test_pipeline_di.py  test_pipeline_integration.py  test_planner.py  (+16 more)
tests/fixtures/: sample_twin_state.json
tests/fixtures/comparison/: fixtures.json
tests/fixtures/golden_traces/: degrade_non_modeled_partial.json  refuse_insufficient_evidence.json  refuse_low_reliability.json  refuse_non_modeled.json  refuse_policy_restricted.json  s1_direct_simple.json  s2_budget_exhausted.json  s2_deliberate_high_stakes.json  s2_deliberate_high_stakes_s1_baseline.json
tests/test_bootstrap/: test_engine.py  test_questions.py
tests/test_comparison/: test_executor.py  test_report.py  test_runners.py  test_schemas.py
tests/test_implicit/: test_cli_heartbeat.py  test_experience_updater.py  test_hard_case_miner.py  test_heartbeat.py  test_integration.py
tools/: batch_evaluate.py  notion_reader.py  seed_calibration.py
(+77 files in other folders)
