[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twin-runtime"
version = "0.1.0"
description = "Calibration-first judgment twin — memory is input, calibrated judgment is output"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0,<3.0",
    "anthropic>=0.20.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies.google]
google = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
twin-runtime = "twin_runtime.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
