[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twin-runtime"
version = "0.1.0"
description = "Calibration-first judgment twin — memory is input, calibrated judgment is output"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
keywords = ["agent", "memory", "decision-making", "calibration", "claude-code", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.20.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]
google = ["google-api-python-client", "google-auth-oauthlib"]
analysis = ["scikit-learn>=1.3"]

[project.scripts]
twin-runtime = "twin_runtime.interfaces.cli:main"

[project.urls]
Homepage = "https://github.com/ZiyaZhang/caltwin"
Repository = "https://github.com/ZiyaZhang/caltwin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
twin_runtime = ["resources/skills/*/SKILL.md", "resources/fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "requires_llm: tests that need ANTHROPIC_API_KEY (deselect with -m 'not requires_llm')",
]
