[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twin-runtime"
version = "0.1.0"
description = "Calibration-first judgment twin — memory is input, calibrated judgment is output"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
keywords = ["agent", "memory", "decision-making", "calibration", "claude-code", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.20.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0", "tqdm>=4.60.0", "mypy>=1.0", "pytest-timeout>=2.0"]
google = ["google-api-python-client", "google-auth-oauthlib"]
analysis = ["scikit-learn>=1.3"]

[project.scripts]
twin-runtime = "twin_runtime.interfaces.cli:main"

[project.urls]
Homepage = "https://github.com/ZiyaZhang/twin-runtime"
Repository = "https://github.com/ZiyaZhang/twin-runtime"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
twin_runtime = ["resources/skills/*/SKILL.md", "resources/fixtures/*.json", "resources/fixtures/comparison_scenarios.json"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",  # module-import-not-at-top — intentional lazy imports throughout
    "E501",  # line-too-long — project uses descriptive long lines
    "E741",  # ambiguous variable name — false positive on short math vars
    "F401",  # unused import — some re-exports are intentional
    "F541",  # f-string-missing-placeholders — some are intentional template strings
    "F811",  # redefined-while-unused — test files re-import for clarity
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401", "F811", "F841"]  # test fixtures may re-import; some assigns are for side effects
"src/twin_runtime/application/dashboard/generator.py" = ["F841"]  # s used across sections
"src/twin_runtime/infrastructure/sources/notion_adapter.py" = ["F841"]  # results used for side effect

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=twin_runtime --cov-report=term-missing --cov-fail-under=60"
markers = [
    "requires_llm: tests that need ANTHROPIC_API_KEY (deselect with -m 'not requires_llm')",
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks integration tests (deselect with -m 'not integration')",
    "security: marks security-related tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
